[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="VentanaDialogo" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 400 )
window_title = "Opciones"

[node name="OptionButton" type="OptionButton" parent="VentanaDialogo"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0

[node name="SelectOption" type="Button" parent="VentanaDialogo"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -38.0
text = "Select"

[node name="ShowDialog" type="Button" parent="."]
anchor_right = 1.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 50 )
text = "Mostrar Di√°logo"

[node name="OptionSelected" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -54.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 50 )

[connection signal="pressed" from="VentanaDialogo/SelectOption" to="." method="_on_SelectOption_pressed"]
[connection signal="button_up" from="ShowDialog" to="." method="_on_ShowDialog_button_up"]
